--- a/platforms/ios/test2.xcarchive/Products/Applications/test2.app/www/index.html
+++ b/platforms/ios/test2.xcarchive/Products/Applications/test2.app/www/index.html
@@ -51,6 +51,9 @@ var pipeRecorderRemoved;
 var intervals;
 
 </script>
+
+<script type="text/javascript" src="js/ios-websocket-hack.js"></script>
+<script type="text/javascript" src="http://s1.addpipe.com/1.3/webrtc-js/adapter.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script type="text/javascript" src="http://s1.addpipe.com/1.3/webrtc-js/kurento-client.js"></script>
 <script type="text/javascript" src="http://s1.addpipe.com/1.3/webrtc-js/kurento-utils.js"></script>
@@ -523,7 +526,7 @@ SoundMeter.prototype.stop = function() {
 	  default:
 		{
 		    ws_uri: 'wss://s3.addpipe.com:443/kurento',
-		    file_uri: 'file:///var/www/html/v_rtc/default.webm', // file to be stored in media server default value
+		    file_uri: 'file:///var/www/html/v_rtc/default.mp4', // file to be stored in media server default value
 		    ice_servers: '[{"url":"stun:stun.l.google.com:19302"},{"url":"stun:stun1.l.google.com:19302"},{"url":"stun:stun2.l.google.com:19302"},{"url":"stun:stun3.l.google.com:19302"},{"url":"stun:stun4.l.google.com:19302"},{"url":"stun:stun.ekiga.net"},{"url":"stun:stun.ideasip.com"},{"url":"stun:stun.schlund.de"},{"url":"stun:stun.stunprotocol.org:3478"},{"url":"stun:stun.voiparound.com"},{"url":"stun:stun.voipbuster.com"},{"url":"stun:stun.voipstunt.com"},{"url":"stun:stun.voxgratia.org"},{"url":"stun:stun.services.mozilla.com"},{"url":"turn:discovery.addpipe.com:443?transport=tcp","username":"addpipe","credential":"superTurnServer"}]'
 		}
 	});
@@ -835,6 +838,13 @@ SoundMeter.prototype.stop = function() {
 			    mediaConstraints: constraints
 			  }
 
+				if (window.device.platform === 'iOS') {
+						options.connectionConstraints = {
+								offerToReceiveAudio: true,
+								offerToReceiveVideo: true
+						};
+				}
+
 			  if (args.ice_servers) {
 			    //console.log("Use ICE servers: " + args.ice_servers);
 			    options.configuration = {
@@ -1085,15 +1095,16 @@ SoundMeter.prototype.stop = function() {
 		      var randomNr  = Math.floor((Math.random() * 999) + 1);
 		      var timestamp = Math.round(new Date().getTime()/1000);
 		      newFileName = "vsrtc"+timestamp+"_"+randomNr;
-		      args.file_uri = 'file:///var/www/html/v_rtc/'+newFileName+'.webm';
+		      args.file_uri = 'file:///var/www/html/v_rtc/'+newFileName+'.mp4';
 			
 		      var mProfile = "MP4";
+					/*
 		      if(micNumber == 0){
 			      mProfile = "MP4_VIDEO_ONLY";
 		      }
 		      if(camNumber == 0){
 			      mProfile = "MP4_AUDIO_ONLY";
-		      }
+		      }*/
 			
 		      var recorder = yield pipeline.create('RecorderEndpoint', {mediaProfile: mProfile, uri: args.file_uri});
 
