--- a/platforms/ios/test2.xcarchive/Products/Applications/test2.app/www/index.html
+++ b/platforms/ios/test2.xcarchive/Products/Applications/test2.app/www/index.html
@@ -131,7 +131,9 @@ SoundMeter.prototype.stop = function() {
       </ion-nav-back-button>
 
 <script type="text/babel">
-
+function isDevice(device) {
+  return window.device && window.device.platform === device;
+}
 
 (function($) {
 
@@ -526,9 +528,10 @@ SoundMeter.prototype.stop = function() {
 	  default:
 		{
 		    ws_uri: 'wss://s3.addpipe.com:443/kurento',
-		    file_uri: 'file:///var/www/html/v_rtc/default.mp4', // file to be stored in media server default value
+		    file_uri: 'file:///var/www/html/v_rtc/default.' + (isDevice('iOS') ? 'mp4' : 'webm'), // file to be stored in media server default value
 		    ice_servers: '[{"url":"stun:stun.l.google.com:19302"},{"url":"stun:stun1.l.google.com:19302"},{"url":"stun:stun2.l.google.com:19302"},{"url":"stun:stun3.l.google.com:19302"},{"url":"stun:stun4.l.google.com:19302"},{"url":"stun:stun.ekiga.net"},{"url":"stun:stun.ideasip.com"},{"url":"stun:stun.schlund.de"},{"url":"stun:stun.stunprotocol.org:3478"},{"url":"stun:stun.voiparound.com"},{"url":"stun:stun.voipbuster.com"},{"url":"stun:stun.voipstunt.com"},{"url":"stun:stun.voxgratia.org"},{"url":"stun:stun.services.mozilla.com"},{"url":"turn:discovery.addpipe.com:443?transport=tcp","username":"addpipe","credential":"superTurnServer"}]'
 		}
+
 	});
 
 
@@ -838,7 +841,7 @@ SoundMeter.prototype.stop = function() {
 			    mediaConstraints: constraints
 			  }
 
-				if (window.device.platform === 'iOS') {
+				if (isDevice('iOS')) {
 						options.connectionConstraints = {
 								offerToReceiveAudio: true,
 								offerToReceiveVideo: true
@@ -1095,9 +1098,9 @@ SoundMeter.prototype.stop = function() {
 		      var randomNr  = Math.floor((Math.random() * 999) + 1);
 		      var timestamp = Math.round(new Date().getTime()/1000);
 		      newFileName = "vsrtc"+timestamp+"_"+randomNr;
-		      args.file_uri = 'file:///var/www/html/v_rtc/'+newFileName+'.mp4';
+		      args.file_uri = 'file:///var/www/html/v_rtc/'+newFileName+(isDevice('iOS') ? '.mp4' : '.webm');
 			
-		      var mProfile = "MP4";
+		      var mProfile = "MP4_VIDEO_ONLY";
 					/*
 		      if(micNumber == 0){
 			      mProfile = "MP4_VIDEO_ONLY";
